[tool.poetry]
name = "nft_generator"
version = "0.1.0"
description = ""
authors = ["Dmitry Korzunin <dmitry.korzunin@elastoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"
ipython = "^8.1.1"
web3 = "^5.28.0"
tqdm = "^4.63.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
datamodel-code-generator = "^0.11.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
